@@ -1540,3 +1540,5 @@
   Based on patch from tabrisnet.
 - Fixed issue where the cgiirc block did not work with IPv6, reported by
   djGrrr, fixed by previous change.
+- Fixed CHROOTDIR, which was broken in 3.2.7: IRC_USER/IRC_GROUP did not work
+  properly when CHROOTDIR was in use (#0003454).
